--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "pug": "^2.0.4",
     "request": "^2.88.0",
     "request-promise": "^4.2.4",
+    "rxjs": "^6.5.2",
+    "websocket": "^1.0.29",
     "winston": "^2.4.2"
   },
   "devDependencies": {
@@ -57,6 +59,7 @@
     "@types/request": "^2.48.1",
     "@types/shelljs": "^0.8.5",
     "@types/supertest": "^2.0.7",
+    "@types/websocket": "0.0.40",
     "@types/winston": "^2.3.9",
     "chai": "^4.2.0",
     "concurrently": "^4.1.0",
